projects/vb6parse/snapshots/parsers/cst/library/interaction/msgbox/msgbox_debug_context.snap
---
source: projects/vb6parse/tests/library/interaction/msgbox.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CompilerDirective
      children:
        - kind: CompilerIfClause
          children:
            - kind: Octothorpe
              text: "#"
            - kind: IfKeyword
              text: If
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: DEBUG_MODE
            - kind: Whitespace
              text: " "
            - kind: ThenKeyword
              text: Then
            - kind: Newline
              text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: MsgBox
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Debug: x = \""
                            - kind: Whitespace
                              text: " "
                            - kind: Ampersand
                              text: "&"
                            - kind: Whitespace
                              text: " "
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: x
                - kind: Newline
                  text: "\n"
        - kind: CompilerEndIfClause
          children:
            - kind: Octothorpe
              text: "#"
            - kind: EndKeyword
              text: End
            - kind: Whitespace
              text: " "
            - kind: IfKeyword
              text: If
            - kind: Newline
              text: "\n"
